Adding new components

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,10 +1,11 @@
 .btn {
-
     background-color: $color-secondary;
+    border-color: $color-secondary-tint;
     border-radius: .4rem;
-    border-style: none;
+    border-style: solid;
+    border-width: .1rem;
     box-shadow: .2rem .2rem .2rem rgba(0, 0, 0, .2);
-    color: $color-secondary-contrast;
+    color: darken($color-secondary-contrast,30%);
     display: inline-block;
     padding: .4rem 1rem;
     text-decoration: none;
@@ -12,22 +13,19 @@
 
     &:link,
     &:visited {
-        font-size: small;
-    }
+        font-size: small; }
 
     &:hover {
-        transform: translateY(-.2rem);
         box-shadow: .2rem .2rem .4rem rgba(0, 0, 0, .4);
-    }
+        color: $color-secondary-contrast;
+        transform: translateY(-.2rem); }
 
     &:focus {
-        outline: none;
-        transform: translateY(-.2rem);
+        color: $color-secondary-contrast;
+        // transform: translateY(-.2rem);
         box-shadow: .2rem .2rem .4rem rgba(0, 0, 0, .4);
-    }
+        outline: none; }
     
     &:active {
-        transform: translateY(-.1rem);
-        box-shadow: .2rem .2rem .2rem rgba(0, 0, 0, .2);
-    }
-}
+        transform: translateY(0);
+        box-shadow: .2rem .2rem .2rem rgba(0, 0, 0, .2); } }
