--- a/src/sass/global/_utilities.scss
+++ b/src/sass/global/_utilities.scss
@@ -1,4 +1,20 @@
 .util-center-text {
     text-align: center;}
+
+.util-margin-bottom-xs {
+    margin-bottom: .5rem;}
+.util-margin-bottom-s {
+    margin-bottom: 1rem;}
 .util-margin-bottom-m {
-    margin-bottom: 8rem;}
+    margin-bottom: 2rem;}
+.util-margin-bottom-l {
+    margin-bottom: 3rem;}
+
+.util-margin-top-xs {
+    margin-top: .5rem;}
+.util-margin-top-s {
+    margin-top: 1rem;}
+.util-margin-top-m {
+    margin-top: 2rem;}
+.util-margin-top-l {
+    margin-top: 3rem;}
