--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -6,29 +6,37 @@ $gap-y: 8rem;
 
 
 // Color theme: Black and White Mode ##################
-// $color-primary: #f0fff0;
-// $color-primary-rgb: rgb(240,255,240);
-// $color-primary-contrast: #000000;
-// $color-primary-contrast-rgb: rgb(0,0,0);
-// $color-primary-shade: #d3e0d3;
-// $color-primary-tint: #f2fff2;
+$color-white: white;
+$color-black: black;
 
-// $color-secondary: #1a1a1a;
-// $color-secondary-rgb: rgb(26,26,26);
-// $color-secondary-contrast: #ffffff;
-// $color-secondary-contrast-rgb: rgb(255,255,255);
-// $color-secondary-shade: #171717;
-// $color-secondary-tint: #313131;
+$color-primary: #f0fff0;
+$color-primary-rgb: rgb(240,255,240);
+$color-primary-contrast: #000000;
+$color-primary-contrast-rgb: rgb(0,0,0);
+$color-primary-shade: #d3e0d3;
+$color-primary-tint: #f2fff2;
+$color-primary-accent: silver;
+
+$color-secondary: #1a1a1a;
+$color-secondary-rgb: rgb(26,26,26);
+$color-secondary-contrast: #ffffff;
+$color-secondary-contrast-rgb: rgb(255,255,255);
+$color-secondary-shade: #171717;
+$color-secondary-tint: #313131;
 
 
 
 // Color theme: Jazz Mode #############################
+// $color-white: white;
+// $color-black: black;
+
 // $color-primary: #1ba1e2;
 // $color-primary-rgb: rgb(27,161,226);
 // $color-primary-contrast: #ffffff;
 // $color-primary-contrast-rgb: rgb(255,255,255);
 // $color-primary-shade: #188ec7;
 // $color-primary-tint: #32aae5;
+// $color-primary-accent: darken(#1ba1e2, 5%);
 
 // $color-secondary: #E33244;
 // $color-secondary-rgb: rgb(227,50,68);
@@ -36,6 +44,7 @@ $gap-y: 8rem;
 // $color-secondary-contrast-rgb: rgb(255,255,255);
 // $color-secondary-shade: #c82c3c;
 // $color-secondary-tint: #e64757;
+// $color-secondary-accent: darken(#E33244, 5%);
 
 // $color-tertiary: #E3DB05;
 // $color-tertiary-rgb: rgb(227,219,5);
@@ -43,23 +52,26 @@ $gap-y: 8rem;
 // $color-tertiary-contrast-rgb: rgb(0,0,0);
 // $color-tertiary-shade: #c8c104;
 // $color-tertiary-tint: #e6df1e;
+// $color-tertiary-accent: darken(#E3DB05, 5%);
 
 
 
 // Color theme: Ocean Hero ############################
-$color-white: white;
-$color-black: black;
+// $color-white: white;
+// $color-black: black;
 
-$color-primary: #1ba1e2;
-$color-primary-rgb: rgb(27,161,226);
-$color-primary-contrast: #ffffff;
-$color-primary-contrast-rgb: rgb(255,255,255);
-$color-primary-shade: #188ec7;
-$color-primary-tint: #32aae5;
+// $color-primary: #1ba1e2;
+// $color-primary-rgb: rgb(27,161,226);
+// $color-primary-contrast: #ffffff;
+// $color-primary-contrast-rgb: rgb(255,255,255);
+// $color-primary-shade: #188ec7;
+// $color-primary-tint: #32aae5;
+// $color-primary-accent: darken(#1ba1e2, 5%);
 
-$color-secondary: #E38A1B;
-$color-secondary-rgb: rgb(227,138,27);
-$color-secondary-contrast: #000000;
-$color-secondary-contrast-rgb: rgb(0,0,0);
-$color-secondary-shade: #c87918;
-$color-secondary-tint: #e69632;
+// $color-secondary: #E38A1B;
+// $color-secondary-rgb: rgb(227,138,27);
+// $color-secondary-contrast: #000000;
+// $color-secondary-contrast-rgb: rgb(0,0,0);
+// $color-secondary-shade: #c87918;
+// $color-secondary-tint: #e69632;
+// $color-secondary-accent: darken(#E38A1B, 5%);
