--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./global/typography";
 @import "./global/utilities";
 @import "./components/buttons";
+@import "./components/input-box";
 @import "./layouts/float-template";
 @import "./pages/home";
 
