--- a/src/sass/global/_utilities.scss
+++ b/src/sass/global/_utilities.scss
@@ -1,20 +1,47 @@
 .util-center-text {
-    text-align: center;}
+    text-align: center; }
+
+.util-margin-xs {
+    margin: .5rem; }
+.util-margin-s {
+    margin: 1rem; }
+.util-margin-m {
+    margin: 2rem; }
+.util-margin-l {
+    margin: 3rem; }
+
+.util-margin-horizontal-xs {
+    margin: 0 .5rem; }
+.util-margin-horizontal-s {
+    margin: 0 1rem; }
+.util-margin-horizontal-m {
+    margin: 0 2rem; }
+.util-margin-horizontal-l {
+    margin: 0 3rem; }
+
+.util-margin-vertical-xs {
+    margin: .5rem 0; }
+.util-margin-vertical-s {
+    margin: 1rem 0; }
+.util-margin-vertical-m {
+    margin: 2rem 0; }
+.util-margin-vertical-l {
+    margin: 3rem 0; }
 
 .util-margin-bottom-xs {
-    margin-bottom: .5rem;}
+    margin-bottom: .5rem; }
 .util-margin-bottom-s {
-    margin-bottom: 1rem;}
+    margin-bottom: 1rem; }
 .util-margin-bottom-m {
-    margin-bottom: 2rem;}
+    margin-bottom: 2rem; }
 .util-margin-bottom-l {
-    margin-bottom: 3rem;}
+    margin-bottom: 3rem; }
 
 .util-margin-top-xs {
-    margin-top: .5rem;}
+    margin-top: .5rem; }
 .util-margin-top-s {
-    margin-top: 1rem;}
+    margin-top: 1rem; }
 .util-margin-top-m {
-    margin-top: 2rem;}
+    margin-top: 2rem; }
 .util-margin-top-l {
-    margin-top: 3rem;}
+    margin-top: 3rem; }
