--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,6 +2,9 @@
     background-color: $color-secondary;
     padding: .5rem; }
 
-.gcf { // Math term: Greatest Common Factor
+.greatest-common-factor { // Math term: Greatest Common Factor
     text-align: center;
     vertical-align: baseline; }
+
+.result {
+    font-size: 1.2rem; }
