--- a/src/sass/global/_base.scss
+++ b/src/sass/global/_base.scss
@@ -3,17 +3,14 @@
 *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
+    box-sizing: border-box; }
 
 body {
     background-color: $color-primary;
     box-sizing: border-box;
     color: $color-primary;
     font-family: "Roboto", sans-serif;
-    font-weight: 300;
-}
+    font-weight: 300;}
 
 html {
-    font-size: 62.5%;
-}
+    font-size: 62.5%; }
