--- a/src/sass/components/_output-boxes.scss
+++ b/src/sass/components/_output-boxes.scss
@@ -1,7 +1,9 @@
-.input__box {
-    display: flex;
-    flex-direction: row;
-    justify-content: right; 
+.output__box {
+    font-size: 1.3rem;
+    height: 2.5rem;
+    padding: .2rem;
+    padding: .4rem 1rem;
+    width: 100%;
 
     &--gcf {
         background-color: $color-primary-accent;
@@ -10,8 +12,4 @@
         border-style: dashed;
         border-width: .1rem;
         box-shadow: -.2rem -.2rem .2rem rgba(255,255,255, .9),
-            .2rem .2rem .2rem rgba(0, 0, 0, .2);
-        padding: .2rem;
-        padding: .4rem 1rem;   
-    }
-}
+            .2rem .2rem .2rem rgba(0, 0, 0, .2); } }
