--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./global/utilities";
 @import "./components/buttons";
 @import "./components/input-boxes";
+@import "./components/output-boxes";
 @import "./layouts/float-template";
 @import "./pages/home";
 
