--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,9 +2,12 @@
     background-color: $color-secondary;
     padding: .5rem; }
 
-.greatest-common-factor { // Math term: Greatest Common Factor
-    text-align: center;
+.greatest-common-factor {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: $column-width;
     vertical-align: baseline; }
 
-.result {
-    font-size: 1.2rem; }
+
